--- a/Group-D/t3-assets/dev/templates.purity_iii.less.group_d.featured-products-title.less.css
+++ b/Group-D/t3-assets/dev/templates.purity_iii.less.group_d.featured-products-title.less.css
@@ -1,12 +1,18 @@
 @font-face {
   font-family: LMRoman10Regular;
-  src: url(<?php echo T3_TEMPLATE_URL; ?>/fonts/LMRoman10Regular.otf);
+  src: url(../../templates/purity_iii/less/fonts/LMRoman10Regular.otf);
 }
 .featured-products-title {
   margin-bottom: 30px;
 }
 .featured-products-title .w50 {
   width: 50%;
+}
+.featured-products-title .w50.left_wing {
+  padding-left: 20px;
+}
+.featured-products-title .w50.right_wing {
+  padding-right: 20px;
 }
 .featured-products-title .w50 .wing {
   border: 1px solid #e6e5e5;
