--- a/Group-D/templates/purity_iii/less/group_d/recent-post-title.less
+++ b/Group-D/templates/purity_iii/less/group_d/recent-post-title.less
@@ -1,12 +1,18 @@
 @font-face {
   font-family: LMRoman10Regular;
-  src: url(<?php echo T3_TEMPLATE_URL; ?>/fonts/LMRoman10Regular.otf);
+  src: url(../fonts/LMRoman10Regular.otf);
 }
 
 .recent-post-title {
   margin-bottom: 30px;
   .w50 {
     width: 50%;
+    &.left_wing{
+    padding-left: 20px;
+    }
+    &.right_wing{
+    padding-right: 20px;
+    }
     .wing {
       border: 1px solid #e6e5e5;
       width: 100%;
