--- a/Template/css/featured-products-title.css
+++ b/Template/css/featured-products-title.css
@@ -8,6 +8,12 @@
 .featured-products-title .w50 {
   width: 50%;
 }
+.featured-products-title .w50.left_wing {
+  padding-left: 20px;
+}
+.featured-products-title .w50.right_wing {
+  padding-right: 20px;
+}
 .featured-products-title .w50 .wing {
   border: 1px solid #e6e5e5;
   width: 100%;
