--- a/Template/css/recent-post-title.css
+++ b/Template/css/recent-post-title.css
@@ -8,6 +8,12 @@
 .recent-post-title .w50 {
   width: 50%;
 }
+.recent-post-title .w50.left_wing {
+  padding-left: 20px;
+}
+.recent-post-title .w50.right_wing {
+  padding-right: 20px;
+}
 .recent-post-title .w50 .wing {
   border: 1px solid #e6e5e5;
   width: 100%;
