--- a/Template/less/featured-products-title.less
+++ b/Template/less/featured-products-title.less
@@ -7,6 +7,12 @@
   margin-bottom: 30px;
   .w50 {
     width: 50%;
+    &.left_wing{
+      padding-left: 20px;
+    }
+    &.right_wing{
+      padding-right: 20px;
+    }
     .wing {
       border: 1px solid #e6e5e5;
       width: 100%;
