--- a/Template/less/newsletter.less
+++ b/Template/less/newsletter.less
@@ -1,6 +1,7 @@
 #newsletter_block_ext {
   overflow: hidden;
   margin-bottom: 0;
+  padding: 0 25px;
   .minibutton {
     height: 26px;
     width: 60px;
@@ -36,17 +37,21 @@
       }
     }
   }
-  .col.promo:hover .opaque {
-    background: rgba(255, 255, 255, 0.2)
-  }
   .col {
     width: 290px;
     height: 230px;
-    margin-right: 20px;
     border: 1px solid #e0e0e0;
     padding: 2px;
     overflow: hidden;
     position: relative;
+    &.promo:hover {
+      .opaque {
+        background: rgba(255, 255, 255, 0.2)
+      }
+    }
+    &.nwltr {
+      margin: 0 11px;
+    }
     &:hover {
       .opaque {
         background: rgba(255, 255, 255, 0.8)
@@ -56,6 +61,9 @@
       width: 100%;
       padding: 4px;
       border: 1px solid #e0e0e0;
+      img{
+        width: 100%;
+      }
     }
     .opaque {
       width: 100%;
